--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,21 +1,2 @@
-server:
-  port: 3344
-
-spring:
-  application:
-    name: cloud-config-center
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/wjt-Alan/springcloud-config.git
-          search-paths:
-            - springcloud-config
-      label: master
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:7001/eureka
-
-info: cloud-config-center
+config:
+  info: config-dev
